ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress
  name: ingress
  namespace: matrix

spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30003
      name: http
    - port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30004
      name: https
  selector:
    app: ngx-kic-dep
